updated proteinfer file

--- a/notebooks/Proteinfer_on_test.ipynb
+++ b/notebooks/Proteinfer_on_test.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -743,7 +743,7 @@
     }
    ],
    "source": [
-    "!/content/proteinfer/env/bin/python proteinfer.py -i /content/Plasmodium_MA_component.fasta -o /content/Plasmodium_predictions.tsv\n"
+    "!/content/proteinfer/env/bin/python proteinfer.py -i /content/Plasmodium_MA_component.fasta -o /content/Plasmodium_CCO_predictions.tsv\n"
    ]
   },
   {
@@ -836,6 +836,289 @@
    ],
    "source": [
     "!/content/proteinfer/env/bin/python proteinfer.py -i /content/Plasmodium_MA_process.fasta -o /content/Plasmodium_BPO_predictions.tsv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import obonet \n",
+    "from Bio import SeqIO\n",
+    "from Bio.SeqRecord import SeqRecord\n",
+    "from Bio.Seq import Seq\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import requests\n",
+    "from tqdm import tqdm\n",
+    "import ast\n",
+    "import pickle\n",
+    "import math\n",
+    "from sklearn.metrics import precision_recall_curve, auc\n",
+    "from utils_corrected import evaluate_annotations, _calculate_metrics_at_threshold, threshold_performance_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import goatools\n",
+    "from goatools.base import get_godag\n",
+    "godag = get_godag('go-basic.obo', optional_attrs='relationship')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filter out terms \n",
+    "\n",
+    "MFO_terms = [term for term in godag.values() if term.namespace == 'molecular_function']\n",
+    "BPO_terms = [term for term in godag.values() if term.namespace == 'biological_process']\n",
+    "CCO_terms = [term for term in godag.values() if term.namespace == 'cellular_component']\n",
+    "\n",
+    "print(len(MFO_terms))\n",
+    "print(len(BPO_terms))\n",
+    "print(len(CCO_terms))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmodium_MFO_sequences = list(SeqIO.parse(\"processed_data_90_30/Plasmodium_MA_function.fasta\", \"fasta\"))\n",
+    "plasmodium_MFO_df = pd.read_csv(\"processed_data_90_30/Plasmodium_MA_function.tsv\", sep=\"\\t\")\n",
+    "assert len(plasmodium_MFO_sequences) == len(plasmodium_MFO_df)\n",
+    "\n",
+    "plasmodium_BPO_sequences = list(SeqIO.parse(\"processed_data_90_30/Plasmodium_MA_process.fasta\", \"fasta\"))\n",
+    "plasmodium_BPO_df = pd.read_csv(\"processed_data_90_30/Plasmodium_MA_process.tsv\", sep=\"\\t\")\n",
+    "assert len(plasmodium_BPO_sequences) == len(plasmodium_BPO_df)\n",
+    "\n",
+    "plasmodium_CCO_sequences = list(SeqIO.parse(\"processed_data_90_30/Plasmodium_MA_component.fasta\", \"fasta\"))\n",
+    "plasmodium_CCO_df = pd.read_csv(\"processed_data_90_30/Plasmodium_MA_component.tsv\", sep=\"\\t\")\n",
+    "assert len(plasmodium_CCO_sequences) == len(plasmodium_CCO_df)\n",
+    "\n",
+    "plasmodium_MFO_df['Raw propagated GO terms'] = plasmodium_MFO_df['Raw propagated GO terms'].apply(ast.literal_eval)\n",
+    "plasmodium_BPO_df['Raw propagated GO terms'] = plasmodium_BPO_df['Raw propagated GO terms'].apply(ast.literal_eval)\n",
+    "plasmodium_CCO_df['Raw propagated GO terms'] = plasmodium_CCO_df['Raw propagated GO terms'].apply(ast.literal_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmodium_CCO_entries = plasmodium_CCO_df['Entry'].values\n",
+    "plasmodium_BPO_entries = plasmodium_BPO_df['Entry'].values\n",
+    "plasmodium_MFO_entries = plasmodium_MFO_df['Entry'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmodium_CCO_predictions = pd.read_csv(\"Plasmodium_CCO_predictions.tsv\", sep=\"\\t\")\n",
+    "plasmodium_BPO_predictions = pd.read_csv(\"Plasmodium_BPO_predictions.tsv\", sep=\"\\t\")\n",
+    "plasmodium_MFO_predictions = pd.read_csv(\"Plasmodium_MFO_predictions.tsv\", sep=\"\\t\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmodium_CCO_predictions = plasmodium_CCO_predictions[plasmodium_CCO_predictions['sequence_name'].isin(plasmodium_CCO_entries)]\n",
+    "plasmodium_CCO_predictions = plasmodium_CCO_predictions[plasmodium_CCO_predictions['predicted_label'].str.contains(\"GO:\")]\n",
+    "plasmodium_CCO_predictions\n",
+    "\n",
+    "plasmodium_CCO_predictions['predicted_label'] = plasmodium_CCO_predictions['predicted_label'].apply(lambda x: x.split(\" \")[0])\n",
+    "plasmodium_CCO_predictions = plasmodium_CCO_predictions[plasmodium_CCO_predictions['predicted_label'].isin([term.id for term in CCO_terms])]\n",
+    "plasmodium_CCO_predictions\n",
+    "\n",
+    "plasmodium_BPO_predictions = plasmodium_BPO_predictions[plasmodium_BPO_predictions['sequence_name'].isin(plasmodium_CCO_entries)]\n",
+    "plasmodium_BPO_predictions = plasmodium_BPO_predictions[plasmodium_BPO_predictions['predicted_label'].str.contains(\"GO:\")]\n",
+    "plasmodium_BPO_predictions['predicted_label'] = plasmodium_BPO_predictions['predicted_label'].apply(lambda x: x.split(\" \")[0])\n",
+    "plasmodium_BPO_predictions = plasmodium_BPO_predictions[plasmodium_BPO_predictions['predicted_label'].isin([term.id for term in BPO_terms])]\n",
+    "print(plasmodium_BPO_predictions)\n",
+    "\n",
+    "plasmodium_MFO_predictions = plasmodium_MFO_predictions[plasmodium_MFO_predictions['sequence_name'].isin(plasmodium_CCO_entries)]\n",
+    "plasmodium_MFO_predictions = plasmodium_MFO_predictions[plasmodium_MFO_predictions['predicted_label'].str.contains(\"GO:\")]\n",
+    "plasmodium_MFO_predictions['predicted_label'] = plasmodium_MFO_predictions['predicted_label'].apply(lambda x: x.split(\" \")[0])\n",
+    "plasmodium_MFO_predictions = plasmodium_MFO_predictions[plasmodium_MFO_predictions['predicted_label'].isin([term.id for term in MFO_terms])]\n",
+    "print(plasmodium_MFO_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_to_annotation_dict_with_scores(df):\n",
+    "    \"\"\"\n",
+    "    Converts a DataFrame with 'Entry', 'GO terms', and 'Score' into a dictionary\n",
+    "    where each Entry maps to a dictionary of {GO term: score}.\n",
+    "    \"\"\"\n",
+    "    annot_dict = {}\n",
+    "    for entry, group in df.groupby('sequence_name'):\n",
+    "        annot_dict[entry] = {row['predicted_label']: row['confidence'] for _, row in group.iterrows()}\n",
+    "    return annot_dict\n",
+    "\n",
+    "plasmodium_CCO_annotation_dict = df_to_annotation_dict_with_scores(plasmodium_CCO_predictions)\n",
+    "plasmodium_BPO_annotation_dict = df_to_annotation_dict_with_scores(plasmodium_BPO_predictions)\n",
+    "plasmodium_MFO_annotation_dict = df_to_annotation_dict_with_scores(plasmodium_MFO_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fill in missing values with {}\n",
+    "for entry in plasmodium_CCO_entries:\n",
+    "    if entry not in plasmodium_CCO_annotation_dict:\n",
+    "        plasmodium_CCO_annotation_dict[entry] = {}\n",
+    "\n",
+    "assert len(plasmodium_CCO_annotation_dict) == len(plasmodium_CCO_entries)\n",
+    "\n",
+    "for entry in plasmodium_BPO_entries:\n",
+    "    if entry not in plasmodium_BPO_annotation_dict:\n",
+    "        plasmodium_BPO_annotation_dict[entry] = {}\n",
+    "\n",
+    "assert len(plasmodium_BPO_annotation_dict) == len(plasmodium_BPO_entries)\n",
+    "\n",
+    "for entry in plasmodium_MFO_entries:\n",
+    "    if entry not in plasmodium_MFO_annotation_dict:\n",
+    "        plasmodium_MFO_annotation_dict[entry] = {}\n",
+    "\n",
+    "assert len(plasmodium_MFO_annotation_dict) == len(plasmodium_MFO_entries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function_df_exploded = plasmodium_MFO_df.explode('Raw propagated GO terms')\n",
+    "process_df_exploded = plasmodium_BPO_df.explode('Raw propagated GO terms')\n",
+    "component_df_exploded = plasmodium_CCO_df.explode('Raw propagated GO terms')\n",
+    "\n",
+    "\n",
+    "#take the entry and raw prop columns \n",
+    "FUNCTION_GROUND_TRUTH = function_df_exploded[['Entry', 'Raw propagated GO terms']]\n",
+    "PROCESS_GROUND_TRUTH = process_df_exploded[['Entry', 'Raw propagated GO terms']]\n",
+    "COMPONENT_GROUND_TRUTH = component_df_exploded[['Entry', 'Raw propagated GO terms']]\n",
+    "\n",
+    "#rename the columns\n",
+    "FUNCTION_GROUND_TRUTH.columns = ['Entry', 'GO terms']\n",
+    "PROCESS_GROUND_TRUTH.columns = ['Entry', 'GO terms']\n",
+    "COMPONENT_GROUND_TRUTH.columns = ['Entry', 'GO terms']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_to_annotation_dict_with_scores(df):\n",
+    "    \"\"\"\n",
+    "    Converts a DataFrame with 'Entry', 'GO terms', and 'Score' into a dictionary\n",
+    "    where each Entry maps to a dictionary of {GO term: score}.\n",
+    "    \"\"\"\n",
+    "    annot_dict = {}\n",
+    "    for entry, group in df.groupby('Entry'):\n",
+    "        annot_dict[entry] = {row['GO terms']: row['Score'] for _, row in group.iterrows()}\n",
+    "    return annot_dict\n",
+    "\n",
+    "def df_to_annotation_dict(df):\n",
+    "    \"\"\"\n",
+    "    Converts a DataFrame with 'Entry' and 'GO terms' into a dictionary\n",
+    "    where each Entry maps to a set of GO terms.\n",
+    "    \"\"\"\n",
+    "    annot_dict = {}\n",
+    "    for entry, group in df.groupby('Entry'):\n",
+    "        annot_dict[entry] = set(group['GO terms'])\n",
+    "    return annot_dict\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Convert the ground truth DataFrames to dictionaries (no scores needed)\n",
+    "function_ground_truth_dict = df_to_annotation_dict(FUNCTION_GROUND_TRUTH)\n",
+    "process_ground_truth_dict = df_to_annotation_dict(PROCESS_GROUND_TRUTH)\n",
+    "component_ground_truth_dict = df_to_annotation_dict(COMPONENT_GROUND_TRUTH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(component_ground_truth_dict) == len(plasmodium_CCO_annotation_dict)\n",
+    "assert len(process_ground_truth_dict) == len(plasmodium_BPO_annotation_dict)\n",
+    "assert len(function_ground_truth_dict) == len(plasmodium_MFO_annotation_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ia_df = pd.read_csv(r'IA_all.tsv', sep='\\t', header=None)\n",
+    "ia_df.columns = ['GO', 'IA']\n",
+    "\n",
+    "ic_dict = dict(zip(ia_df['GO'], ia_df['IA']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "MFO_smin, MFO_fmax, MFO_best_threshold_s, MFO_best_threshold_f, MFO_s_at_fmax, MFO_results_df = threshold_performance_metrics(\n",
+    "    ic_dict, function_ground_truth_dict, plasmodium_MFO_annotation_dict, threshold_range=np.arange(0, 1.01, 0.01)\n",
+    ")\n",
+    "MFO_aupr_micro = calculate_aupr_micro(function_ground_truth_dict, plasmodium_MFO_annotation_dict)\n",
+    "print(f\"AUPR Micro: {MFO_aupr_micro}\")\n",
+    "\n",
+    "BPO_smin, BPO_fmax, BPO_best_threshold_s, BPO_best_threshold_f, BPO_s_at_fmax, BPO_results_df = threshold_performance_metrics(\n",
+    "    ic_dict, process_ground_truth_dict, plasmodium_BPO_annotation_dict, threshold_range=np.arange(0, 1.01, 0.01)\n",
+    ")\n",
+    "BPO_aupr_micro = calculate_aupr_micro(process_ground_truth_dict, plasmodium_BPO_annotation_dict)\n",
+    "print(f\"AUPR Micro: {BPO_aupr_micro}\")\n",
+    "\n",
+    "CCO_smin, CCO_fmax, CCO_best_threshold_s, CCO_best_threshold_f, CCO_s_at_fmax, CCO_results_df = threshold_performance_metrics(\n",
+    "    ic_dict, component_ground_truth_dict, plasmodium_CCO_annotation_dict, threshold_range=np.arange(0, 1.01, 0.01)\n",
+    ")\n",
+    "CCO_aupr_micro = calculate_aupr_micro(component_ground_truth_dict, plasmodium_CCO_annotation_dict)\n",
+    "print(f\"AUPR Micro: {CCO_aupr_micro}\")\n",
+    "\n"
    ]
   }
  ],
