updated for reproduce

--- a/notebooks/PlasmoFP_run_inference.ipynb
+++ b/notebooks/PlasmoFP_run_inference.ipynb
@@ -14,19 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0466a7b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import ast\n",
     "import math\n",
-    "import pickle\n",
     "import random\n",
     "import json\n",
     "import warnings\n",
     "from collections import Counter, deque\n",
     "import copy\n",
+    "import os\n",
+    "import re\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -53,26 +54,11 @@
     "    MultilabelStratifiedKFold, MultilabelStratifiedShuffleSplit\n",
     ")\n",
     "from pathlib import Path\n",
-    "import pickle\n",
-    "import numpy as np\n",
     "\n",
-    "#import re \n",
-    "from pathlib import Path\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "import json\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# Import from corrected utils\n",
     "from utils_corrected import (\n",
     "    compute_ensemble_probs, predict_without_MCD,\n",
     "    chunked_mad_over_runs, build_pred_annots_dict, load_kfold_ensembles, PFP\n",
-    ")\n",
-    "\n",
-    "import os \n",
-    "import re"
+    ")"
    ]
   },
   {
@@ -5589,27 +5575,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f4cfe70f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/function_ALL_data_ancestors_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/function_ALL_data_ancestors_dict.json\") as f:\n",
     "    function_ancestors_dict = json.load(f)\n",
-    "#load /Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/function_ALL_data_json_dict.json\n",
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/function_ALL_data_json_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/function_ALL_data_json_dict.json\") as f:\n",
     "    function_json_dict = json.load(f)\n",
-    "#load /Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/process_ALL_data_ancestors_dict.json\n",
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/process_ALL_data_ancestors_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/process_ALL_data_ancestors_dict.json\") as f:\n",
     "    process_ancestors_dict = json.load(f)\n",
-    "#load /Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/process_ALL_data_json_dict.json\n",
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/process_ALL_data_json_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/process_ALL_data_json_dict.json\") as f:\n",
     "    process_json_dict = json.load(f)\n",
-    "#load /Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/component_ALL_data_ancestors_dict.json\n",
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/component_ALL_data_ancestors_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/component_ALL_data_ancestors_dict.json\") as f:\n",
     "    component_ancestors_dict = json.load(f)\n",
-    "#load /Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/component_ALL_data_json_dict.json\n",
-    "with open(\"/Users/harsh/Documents/PFP_PUBLISH/raw_data_from_uniprot/component_ALL_data_json_dict.json\") as f:\n",
+    "with open(\"raw_data_from_uniprot/component_ALL_data_json_dict.json\") as f:\n",
     "    component_json_dict = json.load(f)"
    ]
   },
