--- a/src/generate_data_splits/create_data_splits.ipynb
+++ b/src/generate_data_splits/create_data_splits.ipynb
@@ -35,11 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set seed for reproducibility\n",
     "np.random.seed(42)"
    ]
   },
@@ -48,6 +47,15 @@
    "metadata": {},
    "source": [
     "Read in the raw datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('raw_data_from_uniprot')"
    ]
   },
   {
@@ -67,10 +75,10 @@
     }
    ],
    "source": [
-    "SAR_MA_AA_path = \"/raw_data_from_uniprot/SAR_MA_AA.tsv\"\n",
-    "Plasmodium_AA_path = \"raw_data_from_uniprot/Plasmodium_AA.tsv\"\n",
-    "Plasmodium_MA_path = \"raw_data_from_uniprot/Plasmodium_MA.tsv\"\n",
-    "SAR_MA_path = \"raw_data_from_uniprot/SAR_MA.tsv\"\n",
+    "SAR_MA_AA_path = \"SAR_MA_AA.tsv\"\n",
+    "Plasmodium_AA_path = \"Plasmodium_AA.tsv\"\n",
+    "Plasmodium_MA_path = \"Plasmodium_MA.tsv\"\n",
+    "SAR_MA_path = \"SAR_MA.tsv\"\n",
     "\n",
     "#read in the datasets\n",
     "SAR_MA_AA = pd.read_csv(SAR_MA_AA_path, sep=\"\\t\")\n",
@@ -84,15 +92,6 @@
     "\n",
     "#assert columns are the same\n",
     "assert SAR_MA_AA.columns.tolist() == Plasmodium_AA.columns.tolist() == Plasmodium_MA.columns.tolist() == SAR_MA.columns.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir('./raw_data_from_uniprot')"
    ]
   },
   {
@@ -112,11 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first create a column in dataset1 called GOAssertion \n",
     "SAR_MA_AA[\"GOAssertion\"] = np.nan \n",
     "Plasmodium_AA[\"GOAssertion\"] = \"AA\"\n",
     "\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +243,6 @@
     }
    ],
    "source": [
-    "#run raw_data_from_uniprot/mmseq_cluster.sh\n",
-    "\n",
     "subprocess.run([\"./mmseq_cluster.sh\", \"-h\"])"
    ]
   },
@@ -1184,11 +1180,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create fasta records for total_SAR_function_GO, total_SAR_process_GO, total_SAR_component_GO\n",
     "seq_records_SAR_function_GO = create_seq_records(total_SAR_function_GO)\n",
     "seq_records_SAR_process_GO = create_seq_records(total_SAR_process_GO)\n",
     "seq_records_SAR_component_GO = create_seq_records(total_SAR_component_GO)\n",
@@ -1197,7 +1192,6 @@
     "assert len(seq_records_SAR_process_GO) == total_SAR_process_GO.shape[0]\n",
     "assert len(seq_records_SAR_component_GO) == total_SAR_component_GO.shape[0]\n",
     "\n",
-    "#write \n",
     "function_path = \"reduced_90_function.fasta\"\n",
     "process_path = \"reduced_90_process.fasta\"\n",
     "component_path = \"reduced_90_component.fasta\"\n",
@@ -1206,12 +1200,10 @@
     "SeqIO.write(seq_records_SAR_process_GO, process_path, \"fasta\")\n",
     "SeqIO.write(seq_records_SAR_component_GO, component_path, \"fasta\")\n",
     "\n",
-    "#write tsv files\n",
     "total_SAR_function_GO.to_csv(\"reduced_90_function.tsv\", sep=\"\\t\", index=False)\n",
     "total_SAR_process_GO.to_csv(\"reduced_90_process.tsv\", sep=\"\\t\", index=False)\n",
     "total_SAR_component_GO.to_csv(\"reduced_90_component.tsv\", sep=\"\\t\", index=False)\n",
     "\n",
-    "#print out the shapes into a file \n",
     "with open('reduced_90_expected_shapes.txt', 'w') as f:\n",
     "    print(\"Function:\", total_SAR_function_GO.shape, file=f)\n",
     "    print(\"Process:\", total_SAR_process_GO.shape, file=f)\n",
@@ -1242,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1248,6 @@
     }
    ],
    "source": [
-    "#get unique terms \n",
     "def get_unique_go_terms(go_terms):\n",
     "    return set([term for terms in go_terms for term in terms])\n",
     "\n",
@@ -1292,7 +1283,6 @@
    "source": [
     "base_url = \"https://www.ebi.ac.uk/QuickGO/services/ontology/go/terms\"\n",
     "\n",
-    "# Function to get ancestors for a batch of GO terms and store the JSON response\n",
     "def get_ancestors(go_terms_batch):\n",
     "    terms = \"%2C\".join(go_terms_batch)  # Join the GO terms with URL-encoded commas\n",
     "    request_url = f\"{base_url}/{terms}/ancestors?relations=is_a\"\n",
@@ -1430,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1434,6 @@
     }
    ],
    "source": [
-    "#get the indicies for non-propogated terms (aka the len is 0)\n",
     "non_propogated_function_terms = [i for i, x in enumerate(total_SAR_function_GO_raw_terms_propogated) if len(x) == 0]\n",
     "non_propogated_process_terms = [i for i, x in enumerate(total_SAR_process_GO_raw_terms_propogated) if len(x) == 0]\n",
     "non_propogated_component_terms = [i for i, x in enumerate(total_SAR_component_GO_raw_terms_propogated) if len(x) == 0]\n",
@@ -3478,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3492,7 +3481,7 @@
     }
    ],
    "source": [
-    "batch_size = 50  # You can adjust the batch size here\n",
+    "batch_size = 50  \n",
     "\n",
     "UNIQUE_FUNCTION_TERMS = list(set(function_train_terms))\n",
     "UNIQUE_COMPONENT_TERMS = list(set(component_train_terms))\n",
@@ -3794,34 +3783,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ky/jqpqz88565l8qdqz4jf3387c0000gn/T/ipykernel_61963/997023908.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  Plasmodium_MA_function['Raw propagated GO terms'] = Plasmodium_MA_function['Raw propagated GO terms'].apply(lambda terms: [term for term in terms if term not in unique_terms_not_in_training_function])\n",
-      "/var/folders/ky/jqpqz88565l8qdqz4jf3387c0000gn/T/ipykernel_61963/997023908.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  Plasmodium_MA_process['Raw propagated GO terms'] = Plasmodium_MA_process['Raw propagated GO terms'].apply(lambda terms: [term for term in terms if term not in unique_terms_not_in_training_function])\n",
-      "/var/folders/ky/jqpqz88565l8qdqz4jf3387c0000gn/T/ipykernel_61963/997023908.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  Plasmodium_MA_component['Raw propagated GO terms'] = Plasmodium_MA_component['Raw propagated GO terms'].apply(lambda terms: [term for term in terms if term not in unique_terms_not_in_training_function])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# #filter out terms in raw propogated terms that are not in the unique_terms_not_in_training_function\n",
     "# Plasmodium_MA_function['Raw propagated GO terms'] = Plasmodium_MA_function['Raw propagated GO terms'].apply(lambda terms: [term for term in terms if term not in unique_terms_not_in_training_function])\n",
